title overflow issue improved

--- a/style.css
+++ b/style.css
@@ -577,7 +577,7 @@ body {
     }
 
     .title {
-        margin-left: 25px;
+        margin-left: 1px;
         font-size: 1.4em;
     }
 
